# cspr-cctp-contracts

./: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
src/: lib.rs  message_transmitter.rs  stablecoin.rs  token_messenger_minter.rs
src/message_transmitter/: errors.rs  events.rs  message.rs  storage.rs
src/message_transmitter/tests/: mod.rs
src/stablecoin/: cross_contract_test.rs  errors.rs  events.rs  storage.rs
src/stablecoin/tests/: allowance.rs  mint_and_burn.rs  permissions.rs  transfer.rs
src/tests/: mod.rs  setup.rs  signature.rs
src/token_messenger_minter/: burn_message.rs  errors.rs  events.rs  storage.rs
src/token_messenger_minter/tests/: mod.rs  remote_token_messenger.rs  token.rs
tests/: mod.rs
