[package]
name = "cctp_cspr_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.1.0", features = [], default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.19", default-features = false }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
sha3 = {version = "0.10.8", default-features = false}

[dev-dependencies]
odra-test = { version = "1.1.0", features = [], default-features = false }
alloy-dyn-abi = "^0.7.7"
alloy = {version="0.1.4", features = ["k256"]}

[build-dependencies]
odra-build = { version = "1.1.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "1.1.0", features = [], default-features = false }

[[bin]]
name = "cctp_cspr_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cctp_cspr_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
